--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -4,12 +4,12 @@ name: github-osx
 on:
   push:
     paths:
-    - .github/**
+    - .github/osx.yml
     - Build/**
     - Source/**
   pull_request:
     paths:
-    - .github/**
+    - .github/osx.yml
     - Build/**
     - Source/**
 
