Workflows: try removing path filter

--- a/.github/workflows/firebot.yml
+++ b/.github/workflows/firebot.yml
@@ -5,10 +5,10 @@ on:
   push:
     branches:
     - github-firebot
-    paths:
-    - .github/firebot.yml
-    - Build/**
-    - Source/**
+    # paths:
+    # - .github/firebot.yml
+    # - Build/**
+    # - Source/**
   # schedule:
   #   # run every night at midnight EST (4:00 am UTC)
   #   # * is a special character in YAML so you have to quote this string
