--- a/.github/workflows/firebot.yml
+++ b/.github/workflows/firebot.yml
@@ -4,15 +4,15 @@ name: github-firebot
 on:
   push:
     branches:
-    - github-firebot
-    # paths:
-    # - .github/firebot.yml
-    # - Build/**
-    # - Source/**
-  # schedule:
-  #   # run every night at midnight EST (4:00 am UTC)
-  #   # * is a special character in YAML so you have to quote this string
-  #   - cron:  '0 4 * * *'
+      - github-firebot
+    paths:
+      - .github/workflows/firebot.yml
+      - Build/**
+      - Source/**
+  schedule:
+    # run every night at midnight EST (4:00 am UTC)
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '0 4 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
