--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -4,7 +4,7 @@ name: github-windows
 on:
   push:
     paths:
-    - .github/windows.yml
+    - .github/workflows/windows.yml
     - Build/**
     - Source/**
   pull_request:
