Workflows: add compile dependency for run job

--- a/.github/workflows/firebot.yml
+++ b/.github/workflows/firebot.yml
@@ -90,6 +90,7 @@ jobs:
 
     name: run verification
     runs-on: [ubuntu-latest]
+    needs: compile-fds
 
     steps:
     - uses: actions/checkout@v4
