--- a/.github/workflows/firebot.yml
+++ b/.github/workflows/firebot.yml
@@ -106,7 +106,7 @@ jobs:
     - name: download a single artifact
       uses: actions/download-artifact@v3
       with:
-        name: fds_impi_intel_linux
+        name: fds_impi_intel_linux_db
 
     - name: run a case
       run: |
