--- a/.github/workflows/firebot.yml
+++ b/.github/workflows/firebot.yml
@@ -76,7 +76,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: fds_impi_intel_linux_db
-        path: $GITHUB_WORKSPACE/Build/impi_intel_linux_db/fds_impi_intel_linux_db
+        path: fds/Build/impi_intel_linux_db/fds_impi_intel_linux_db
         retention-days: 1
 
     # - name: build fds release
