--- a/.github/workflows/firebot.yml
+++ b/.github/workflows/firebot.yml
@@ -75,8 +75,9 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: fds_impi_intel_linux_db
-        path: $GITHUB_WORKSPACE/Build/impi_intel_linux_db
+        path: /home/runner/work/fds/fds/Build/impi_intel_linux_db/fds_impi_intel_linux_db
         retention-days: 1
+        if-no-files-found: error
 
     # - name: build fds release
     #   run: |
