Workflows: change permissions

--- a/.github/workflows/firebot.yml
+++ b/.github/workflows/firebot.yml
@@ -21,8 +21,8 @@ on:
 #   group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref }}
 #   cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
-permissions:
-  contents: read
+# permissions:
+#   contents: read
 
 jobs:
   compile-fds:
@@ -113,6 +113,7 @@ jobs:
     - name: run a case
       run: |
         cd ./Build/impi_intel_linux_db
+        ls
         ./fds_impi_intel_linux_db
 
 
