Workflows: try run just after build

--- a/.github/workflows/firebot.yml
+++ b/.github/workflows/firebot.yml
@@ -70,6 +70,9 @@ jobs:
         cd ./Build/impi_intel_linux_db
         sh ./make_fds.sh
         ./fds_impi_intel_linux_db
+        cd $GITHUB_WORKSPACE/Verification/Fires
+        $GITHUB_WORKSPACE/Build/impi_intel_linux_db/fds_impi_intel_linux_db simple_test.fds
+
     # - name: build fds release
     #   run: |
     #     source /opt/intel/oneapi/setvars.sh
