--- a/.github/workflows/firebot.yml
+++ b/.github/workflows/firebot.yml
@@ -70,21 +70,18 @@ jobs:
         cd ./Build/impi_intel_linux_db
         sh ./make_fds.sh
         ./fds_impi_intel_linux_db
-    # cd $GITHUB_WORKSPACE/Verification/Fires
-    # $GITHUB_WORKSPACE/Build/impi_intel_linux_db/fds_impi_intel_linux_db simple_test.fds
-
-    # - name: build fds release
-    #   run: |
-    #     source /opt/intel/oneapi/setvars.sh
-    #     cd ./Build/impi_intel_linux
-    #     sh ./make_fds.sh
-    #     ./fds_impi_intel_linux
+    - name: build fds release
+      run: |
+        source /opt/intel/oneapi/setvars.sh
+        cd ./Build/impi_intel_linux
+        sh ./make_fds.sh
+        ./fds_impi_intel_linux
 
     - name: run a case
       run: |
         source /opt/intel/oneapi/setvars.sh
         cd $GITHUB_WORKSPACE/Verification/Fires
-        $GITHUB_WORKSPACE/Build/impi_intel_linux_db/fds_impi_intel_linux_db tmp_lower_limit_default.fds
+        $GITHUB_WORKSPACE/Build/impi_intel_linux/fds_impi_intel_linux tmp_lower_limit_default.fds
 
 
 
